[package]
name = "written-numbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
strum_macros = "0.24.3"
maplit = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
itoa = "1.0.4"
