[package]
name = "written-numbers"
description = "Convert numbers (1337) to words (one thousand three hundred thirty-seven)."
version = "0.1.2"
edition = "2021"
authors = ["Kyza"]
license = "MIT"
homepage = "https://numbers.kyza.net/"
repository = "https://github.com/Kyza/written-numbers"
readme = "../README.md"
keywords = ["words", "numbers", "converter", "math", "wasm"]
categories = [
	"text-processing",
	"value-formatting",
	"wasm",
	"mathematics",
	"internationalization",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
strum_macros = "0.24.3"
maplit = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
itoa = "1.0.4"
clap = { version = "4.0.29", features = ["derive"] }
peak_alloc = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
pomsky-macro = "0.9.0"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
