[package]
name = "written-numbers-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Kyza"]
license = "MIT"
homepage = "https://numbers.kyza.net/"
repository = "https://github.com/Kyza/written-numbers"
readme = "../README.md"
keywords = [
	"words",
	"word",
	"numbers",
	"number",
	"number-to-words",
	"converter",
	"ordinal",
	"string",
	"math",
	"tool",
	"javascript",
	"typescript",
	"rust",
	"wasm",
]
categories = [
	"text-processing",
	"value-formatting",
	"wasm",
	"mathematics",
	"internationalization",
]
exclude = ["./node_modules", "./dist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
strum_macros = "0.24.3"
maplit = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { features = ["js"] }

written-numbers = { path = "../written-numbers-lib" }
js-sys = "0.3.61"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
